# platformer

./: Cargo.toml
assets/maps/: test.json
assets/tilemaps/: base.json
src/: main.rs
src/game/: mod.rs
src/game/map/: components.rs  mod.rs  resources.rs  structs.rs  systems.rs
src/game/player/: mod.rs
src/graphics/: mod.rs
src/graphics/systems/: map.rs  player.rs
src/splash/: mod.rs
src/utils/: mod.rs  vectors.rs
tiled/: base.tsx  map_test.tmx  platformer.tiled-session
